fixed where the legth of gap2 misbehaves

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
   align-items: center;
   width: 100%;
   gap:20px;
+  height: 100%;
 }
 
 .gap1{
